--- a/style/main.css
+++ b/style/main.css
@@ -17,6 +17,16 @@
  * ===========================
 **/
 
+@font-face {
+    font-family: 'Thailandesa';
+    src: url('Thailandesa.woff2') format('woff2'),
+        url('Thailandesa.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+
 /* General Style */
 body {
 	background-color: #020001;
