--- a/style/main.css
+++ b/style/main.css
@@ -317,13 +317,14 @@ input[type=range]::-ms-fill-upper {
 
 @media screen and (max-width: 415px) {
 	h1 {
-	  font-size: 25vw;
-	  line-height: 23vw;
+		font-family: 'Thailandesa';
+		font-size: 25vw;
+		line-height: 23vw;
 	}
 
 	[data-component="text-box"]{
-		min-height: 33%;
-		max-height: 33%;
+		min-height: 30%;
+		max-height: 30%;
 	}
 
 	[data-content=character-expression] {
@@ -352,7 +353,7 @@ input[type=range]::-ms-fill-upper {
 		@font-face {
 			font-family: 'Thailandesa';
 			src: url('https://github.com/j0hndavid/j0hndavid.github.io/blob/master/assets/fonts/Thailandesa.svg') format('svg');
-			font-weight: normal;OpenSans
+			font-weight: normal;
 			font-style: normal;
 		}
 		}
@@ -373,6 +374,10 @@ input[type=range]::-ms-fill-upper {
 				font-style: normal;
 			}
 		}
+
+
+		
+	}
 		
 
 	
