--- a/style/main.css
+++ b/style/main.css
@@ -19,7 +19,17 @@
 **/
 
 
-
+@font-face {
+    font-family: 'Thailandesa';
+    src: url('https/github.com/j0hndavid/j0hndavid.github.io/tree/master/assets/fonts/Thailandesa.eot');
+    src: url('https/github.com/j0hndavid/j0hndavid.github.io/tree/master/assets/fonts/Thailandesa.eot?#iefix') format('embedded-opentype'),
+        url('https/github.com/j0hndavid/j0hndavid.github.io/tree/master/assets/fonts/Thailandesa.woff2') format('woff2'),
+        url('https/github.com/j0hndavid/j0hndavid.github.io/tree/master/assets/fonts/Thailandesa.woff') format('woff'),
+        url('https/github.com/j0hndavid/j0hndavid.github.io/tree/master/assets/fonts/Thailandesa.ttf') format('truetype'),
+        url('https/github.com/j0hndavid/j0hndavid.github.io/tree/master/assets/fonts/Thailandesa.svg#Thailandesa') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
 
 
 /* General Style */
@@ -172,8 +182,8 @@ button:hover {
 /* Text Box styling */
 [data-component="text-box"] {
 	
-	min-height: 22%;
-    max-height: 22%;
+	min-height: 21%;
+    max-height: 21%;
 
 
 }
