--- a/style/main.css
+++ b/style/main.css
@@ -21,7 +21,7 @@
 
 @font-face {
     font-family: 'Thailandesa';
-    src: url('https://j0hndavid.github.io/blob/7fbb0b454cd1af591af41441339fecf95b31b03b/assets/fonts/Thailandesa.eot');
+    src: url('https://github.com/j0hndavid/j0hndavid.github.io/blob/7fbb0b454cd1af591af41441339fecf95b31b03b/assets/fonts/Thailandesa.eot');
     src: url('https://j0hndavid.github.io/blob/7fbb0b454cd1af591af41441339fecf95b31b03b/assets/fonts/Thailandesa.eot?#iefix') format('embedded-opentype'),
         url('https://j0hndavid.github.io/blob/7fbb0b454cd1af591af41441339fecf95b31b03b/assets/fonts/Thailandesa.woff2') format('woff2'),
         url('https://j0hndavid.github.io/blob/7fbb0b454cd1af591af41441339fecf95b31b03b/assets/fonts/Thailandesa.woff') format('woff'),
