--- a/style/main.css
+++ b/style/main.css
@@ -331,6 +331,7 @@ input[type=range]::-ms-fill-upper {
 
 	}
 
+	/*
 	@media only screen and (max-width: 320px) {
 		@font-face {
 			font-family: 'Thailandesa';
@@ -355,7 +356,10 @@ input[type=range]::-ms-fill-upper {
 				font-weight: normal;
 				font-style: normal;
 			}
+
+			
 		}
+		*/
 
 
 
