--- a/style/main.css
+++ b/style/main.css
@@ -25,7 +25,7 @@
     src: url('/assets/fonts/Thailandesa.eot?#iefix') format('embedded-opentype'),
         url('/assets/fonts/Thailandesa.woff2') format('woff2'),
         url('/assets/fonts/Thailandesa.woff') format('woff'),
-        url('/assets/fonts/Thailandesa.ttf') format('truetype'),
+        url(/assets/fonts/Thailandesa.ttf) format('truetype'),
         url('/assets/fonts/Thailandesa.svg#Thailandesa') format('svg');
     font-weight: normal;
     font-style: normal;
