--- a/style/main.css
+++ b/style/main.css
@@ -22,8 +22,8 @@
 @font-face {
     font-family: 'Thailandesa';
     src: url(/assets/fonts/Thailandesa.eot);
-    src: url('/assets/fonts/Thailandesa.eot?#iefix') format('embedded-opentype'),
-        url('/assets/fonts/Thailandesa.woff2') format('woff2'),
+    src: url(/assets/fonts/Thailandesa.eot?#iefix) format('embedded-opentype'),
+        url(/assets/fonts/Thailandesa.woff2) format('woff2'),
         url('/assets/fonts/Thailandesa.woff') format('woff'),
         url(/assets/fonts/Thailandesa.ttf) format('truetype'),
         url('/assets/fonts/Thailandesa.svg#Thailandesa') format('svg');
