--- a/style/main.css
+++ b/style/main.css
@@ -24,9 +24,9 @@
     src: url(/assets/fonts/Thailandesa.eot);
     src: url(/assets/fonts/Thailandesa.eot?#iefix) format('embedded-opentype'),
         url(/assets/fonts/Thailandesa.woff2) format('woff2'),
-        url('/assets/fonts/Thailandesa.woff') format('woff'),
+        url(/assets/fonts/Thailandesa.woff) format('woff'),
         url(/assets/fonts/Thailandesa.ttf) format('truetype'),
-        url('/assets/fonts/Thailandesa.svg#Thailandesa') format('svg');
+        url(/assets/fonts/Thailandesa.svg#Thailandesa) format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -299,7 +299,7 @@ input[type=range]::-ms-fill-upper {
 
 @media screen and (max-width: 415px) {
 	h1 {
-		font-family: 'Thailandesa';
+
 		font-size: 25vw;
 		line-height: 23vw;
 	}
@@ -331,36 +331,11 @@ input[type=range]::-ms-fill-upper {
 
 	}
 
-	/*
-	@media only screen and (max-width: 320px) {
-		@font-face {
-			font-family: 'Thailandesa';
-			src: url('https://github.com/j0hndavid/j0hndavid.github.io/blob/master/assets/fonts/Thailandesa.svg') format('svg');
-			font-weight: normal;
-			font-style: normal;
-		}
-		}
-		@media only screen and (max-device-width: 720px) and (orientation:portrait) {
-			@font-face {
-				font-family: 'Thailandesa';
-				src: url('https://github.com/j0hndavid/j0hndavid.github.io/blob/master/assets/fonts/Thailandesa.svg') format('svg');
-				font-weight: normal;
-				font-style: normal;
-			}
-		
-		}
-		@media only screen and (max-device-width: 1280px) and (orientation:landscape) {
-			@font-face {
-				font-family: 'Thailandesa';
-				src: url('https://github.com/j0hndavid/j0hndavid.github.io/blob/master/assets/fonts/Thailandesa.svg') format('svg');
-				font-weight: normal;
-				font-style: normal;
-			}
+	
 
 			
 		}
-		*/
-
+		
 
 
 	}
