--- a/style/main.css
+++ b/style/main.css
@@ -58,7 +58,8 @@ div.herojin {
 	left: 50%;
 	-ms-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
-	
+	animation: fadeIn;
+	animation-duration: 3s;
 }
 
 
