--- a/style/main.css
+++ b/style/main.css
@@ -185,9 +185,15 @@ button:hover {
 	
 	min-height: 21%;
     max-height: 21%;
-    grid-template-columns: 10rem;
+   
+}
+[data-component]:before {
+
+	grid-template-columns: 10rem;
 
 }
+
+
 
 [data-ui=who]:not(:empty) {
 
