--- a/style/main.css
+++ b/style/main.css
@@ -20,7 +20,7 @@
 
 
 @font-face {
-    font-family: 'Thailandesa';
+    font-family: Thailandesa;
     src: url('/assets/fonts/Thailandesa.eot');
     src: url('/assets/fonts/Thailandesa.eot?#iefix') format('embedded-opentype'),
         url('/assets/fonts/Thailandesa.woff2') format('woff2'),
